# Book_Crossing_RecSys

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml  setup.cfg
notebooks/: eda.ipynb
src/data/: get_data.sh  helper.py  preprocess_raw_data.py
src/database/: pgadmin_config.json  rewrite_postgres_table_with_csv.py
src/sql/: schema.sql
workflow/: Snakefile
