[tool.poetry]
name = "book-crossing-recsys"
version = "0.1.0"
description = "recsys pet project"
authors = ["Gooogr"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.0"
numpy = "^1.24.2"


[tool.poetry.group.dev.dependencies]
notebook = "^6.5.4"
ipywidgets = "^8.0.6"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
flake8 = "^6.0.0"
isort = "^5.12.0"
pylint = "^2.17.2"
mypy = "^1.2.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
